2012-07-23  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_subr.c (dt_printf): Don't call vsnprintf() multiple
	times in a given va_start/va_end round.
	* COMMANDLINE-OPTIONS: Document that -B works.

	* libdtrace/dt_module.c (dt_module_load): Fix flipped failure case
	in module loading.
	(dt_module_getctf): Only try to load the module if it's not
	already loaded: try to load it before checking CTF state.
	(dt_module_shuffle_to_start): New function.
	(dtrace_update): Call it.

	* libdtrace/dt_open.c (dt_vopen): Shuffle the C and D modules to
	the start of the list before doing type lookups that use them.

	* dt_lex.c (S2{RGX_PSPEC}): Filter out BEGIN, END, and ERROR.
	Avoid depending on yytext while unput()ting.
	(id_or_type): Reformulate to avoid looking up unknown types.
	(input): Delete dead code.
	(unput): Likewise.

	* test/unittest/offsetof/err.D_UNKNOWN.badmemb.r: Adjust.
	* test/unittest/typedef/err.D_SYNTAX.BadExistingTypedef.r: Likewise.

2012-07-21  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_impl.h (dt_module): New dm_ctdata_data member,
	holding dynamically-allocated decompressed CTF data.
	* libdtrace/dt_module.c: Include <zlib.h>.
	(GZCHUNKSIZE): New macro, arbitrarily set at 512Kb.
	(dt_ctf_uncompress): New function.
	(dt_module_load): Call it when CTF sections are present.  Do not
	try to pass the uninitialized symbol and string tables to
	ctf_bufopen().  Log CTF errors in the debugging stream.
	(dt_module_getctf): Kernel modules with CTF with a parent of
	"PARENT" should use dtrace_ctf instead.
	(dt_module_unload): Free dm_ctdata_data.
	(dt_kern_module_init): Consider the dtrace_ctf module to be
	built-in.

	* libdtrace/dt_open.c (_dtrace_globals): Fix the CTF types
	for curthread, getmajor(), getminor(), mutex_owned(),
	mutex_owner(), mutex_type_adaptive(), mutex_type_spin(),
	rw_iswriter(), rw_read_held(), and rw_write_held().

	* INCOMPATIBILITIES: Document the permanent unavailability of the